<resources>
    <string name="app_name">GitHub Challenge</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings utilizadas no Toast -->
    <string name="toast_like">Like no repositorio : </string>
    <string name="toast_share">Compartilhamento do repositorio : </string>

    <!-- Strings utilizadas nas views -->
    <string name="nome_do_repositorio">Nome do Repositorio</string>
    <string name="estrelas">Estrelas: </string>
    <string name="forks">Forks: </string>
    <string name="autor">Autor: </string>
    <string name="stars">Stars</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="logo">Logo</string>
    <string name="Avatar">Avatar</string>

</resources>